# cot-publisher

./: .gitignore  Cargo.toml  README.md  app.js  cot.js  index.html  manifest.json  package.json  proxy-server.js  service-worker.js  styles.css  test-udp.sh
src/: main.rs
